--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>Семестровая работа</title>
         <link rel="stylesheet" href="style/styles.css">
+        <script src="js/main.js" defer></script>
     </head>
     <body>
         <div class="page-container">
@@ -17,12 +18,12 @@
                     <ul class="socials" aria-label="Социальные ссылки">
                         <li>
                             <a href="https://github.com/ProstoRoma02" class="social-link github" target="_blank" aria-label="GitHub">
-                                <img src="../images/github-mark.png" alt="GitHub" width="24" height="24">
+                                <img src="images/github-mark.png" alt="GitHub" width="24" height="24">
                             </a>
                         </li>
                         <li>
                             <a href="https://t.me/ProstoRoma02" target="_blank" class="social-link telegram" aria-label="Telegram">
-                                <img src="../images/telegram.png" alt="Telegram" width="24" height="24">
+                                <img src="images/telegram.png" alt="Telegram" width="24" height="24">
                             </a>
                         </li>
                     </ul>
@@ -48,24 +49,58 @@
                     <p>Обо мне: студент РТУ МИРЭА, учащийся на направлении "Фуллстек Разработка".</p>
                 </section>
                 <section class="skills-container" aria-label="Навыки">
-                    <div class="skill-tag">Умение работать в коллективе</div>
-                    <div class="skill-tag">Знание многих языков программирования</div>
-                    <div class="skill-tag">Опыт в создании сайтов</div>
-                    <div class="skill-tag">Знания в фронтенд разработке</div>
+                    <div class="skill-tag">HTML5 & CSS3</div>
+                    <div class="skill-tag">JavaScript ES6+</div>
+                    <div class="skill-tag">React.js</div>
+                    <div class="skill-tag">Node.js & Express</div>
+                    <div class="skill-tag">MongoDB & PostgreSQL</div>
+                    <div class="skill-tag">Git & GitHub</div>
+                    <div class="skill-tag">Docker & DevOps</div>
+                    <div class="skill-tag">REST API</div>
+                    <div class="skill-tag">Адаптивный дизайн</div>
+                    <div class="skill-tag">Тестирование кода</div>
                 </section>
                 <section class="experience-section" aria-label="Опыт работы">
-                    <h2 class="section-title">Мой опыт работы</h2>
+                    <h2 class="section-title">Мои проекты и достижения</h2>
                     <div class="experience-card">
-                        <h3 class="experience-title">Запуск первого проекта</h3>
-                        <p class="experience-desc">Запуск первого игрового проекта и заработок первых денег в 2017 году.</p>
+                        <h3 class="experience-title">Веб-приложение "Task Manager"</h3>
+                        <p class="experience-desc">Полноценное веб-приложение для управления задачами с React.js фронтендом и Node.js бэкендом. Включает аутентификацию, CRUD операции и реальное время обновления.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">Node.js</span>
+                            <span class="tech-tag">MongoDB</span>
+                            <span class="tech-tag">Socket.io</span>
+                        </div>
                     </div>
                     <div class="experience-card">
-                        <h3 class="experience-title">Разработка первого крупного сайта автобота</h3>
-                        <p class="experience-desc">Разработка фронтенд части крупного проекта.</p>
+                        <h3 class="experience-title">E-commerce платформа</h3>
+                        <p class="experience-desc">Разработка интернет-магазина с корзиной покупок, системой платежей и админ-панелью. Интеграция с внешними API и оптимизация производительности.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Express.js</span>
+                        </div>
                     </div>
                     <div class="experience-card">
-                        <h3 class="experience-title">Стажировка в настоящей компании</h3>
-                        <p class="experience-desc">Стажировка в компании по разработке онлайн школы математики.</p>
+                        <h3 class="experience-title">REST API для мобильного приложения</h3>
+                        <p class="experience-desc">Создание масштабируемого API с аутентификацией JWT, валидацией данных и документацией Swagger. Обработка больших объемов данных и кэширование.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">Node.js</span>
+                            <span class="tech-tag">PostgreSQL</span>
+                            <span class="tech-tag">Redis</span>
+                            <span class="tech-tag">Docker</span>
+                        </div>
+                    </div>
+                    <div class="experience-card">
+                        <h3 class="experience-title">Стажировка в IT-компании</h3>
+                        <p class="experience-desc">Стажировка в компании по разработке образовательных платформ. Работа в команде над проектами с использованием современных технологий и методологий разработки.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">Git</span>
+                            <span class="tech-tag">Agile</span>
+                            <span class="tech-tag">Code Review</span>
+                            <span class="tech-tag">Testing</span>
+                        </div>
                     </div>
                 </section>
             </main>
