--- a/pages/goods.html
+++ b/pages/goods.html
@@ -2,9 +2,10 @@
 <html lang="ру">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>Товары</title>
         <link rel="stylesheet" href="../style/styles.css">
+        <script src="../js/main.js" defer></script>
     </head>
     <body>
         <div class="page-container">
@@ -38,25 +39,79 @@
                 </ul>
             </nav>
             <main class="content">
-                <section class="experience-section" aria-label="Перечень услуг">
-                    <h2 class="section-title">Наши товары</h2>
+                <section class="experience-section" aria-label="Услуги разработки">
+                    <h2 class="section-title">Услуги разработки</h2>
                     <div class="cards-grid">
                         <article class="experience-card service-card">
-                            <img src="../images/Audi A7.png" alt="Услуга 1" loading="lazy">
-                            <h3 class="experience-title">Audi A7</h3>
-                            <p class="experience-desc">Цена: 3.490.000 ₽</p>
+                            <div class="service-icon">🌐</div>
+                            <h3 class="experience-title">Веб-разработка</h3>
+                            <p class="experience-desc">Создание современных веб-сайтов и веб-приложений с использованием HTML5, CSS3, JavaScript и современных фреймворков.</p>
+                            <div class="service-features">
+                                <span class="feature-tag">Адаптивный дизайн</span>
+                                <span class="feature-tag">SEO оптимизация</span>
+                                <span class="feature-tag">Быстрая загрузка</span>
+                            </div>
+                            <div class="service-price">От 50,000 ₽</div>
                             <div class="card-spacer"></div>
                         </article>
                         <article class="experience-card service-card">
-                            <img src="../images/Audi s7.jpg" alt="Услуга 2" loading="lazy">
-                            <h3 class="experience-title">Audi S7</h3>
-                            <p class="experience-desc">Цена: 6.000.000 ₽</p>
+                            <div class="service-icon">⚛️</div>
+                            <h3 class="experience-title">React приложения</h3>
+                            <p class="experience-desc">Разработка интерактивных пользовательских интерфейсов с использованием React.js, Redux и современных инструментов разработки.</p>
+                            <div class="service-features">
+                                <span class="feature-tag">Компонентная архитектура</span>
+                                <span class="feature-tag">Управление состоянием</span>
+                                <span class="feature-tag">Тестирование</span>
+                            </div>
+                            <div class="service-price">От 80,000 ₽</div>
                             <div class="card-spacer"></div>
                         </article>
                         <article class="experience-card service-card">
-                            <img src="../images/Audi rs7.jpg" alt="Услуга 3" loading="lazy">
-                            <h3 class="experience-title">Audi RS7</h3>
-                            <p class="experience-desc">Цена: 15.000.000 ₽</p>
+                            <div class="service-icon">🚀</div>
+                            <h3 class="experience-title">Backend API</h3>
+                            <p class="experience-desc">Создание серверной части приложений с REST API, базами данных и интеграцией с внешними сервисами.</p>
+                            <div class="service-features">
+                                <span class="feature-tag">Node.js & Express</span>
+                                <span class="feature-tag">Базы данных</span>
+                                <span class="feature-tag">Безопасность</span>
+                            </div>
+                            <div class="service-price">От 70,000 ₽</div>
+                            <div class="card-spacer"></div>
+                        </article>
+                        <article class="experience-card service-card">
+                            <div class="service-icon">📱</div>
+                            <h3 class="experience-title">Полноценные приложения</h3>
+                            <p class="experience-desc">Разработка end-to-end решений с фронтендом, бэкендом, базой данных и деплоем на облачные платформы.</p>
+                            <div class="service-features">
+                                <span class="feature-tag">Fullstack разработка</span>
+                                <span class="feature-tag">Docker контейнеризация</span>
+                                <span class="feature-tag">CI/CD пайплайн</span>
+                            </div>
+                            <div class="service-price">От 150,000 ₽</div>
+                            <div class="card-spacer"></div>
+                        </article>
+                        <article class="experience-card service-card">
+                            <div class="service-icon">🔧</div>
+                            <h3 class="experience-title">Техническая поддержка</h3>
+                            <p class="experience-desc">Обслуживание и поддержка существующих проектов, исправление ошибок и добавление новых функций.</p>
+                            <div class="service-features">
+                                <span class="feature-tag">Мониторинг</span>
+                                <span class="feature-tag">Обновления</span>
+                                <span class="feature-tag">Оптимизация</span>
+                            </div>
+                            <div class="service-price">От 30,000 ₽/мес</div>
+                            <div class="card-spacer"></div>
+                        </article>
+                        <article class="experience-card service-card">
+                            <div class="service-icon">🎓</div>
+                            <h3 class="experience-title">Обучение программированию</h3>
+                            <p class="experience-desc">Индивидуальные уроки и консультации по веб-разработке, помощь в изучении современных технологий.</p>
+                            <div class="service-features">
+                                <span class="feature-tag">HTML/CSS/JS</span>
+                                <span class="feature-tag">React/Node.js</span>
+                                <span class="feature-tag">Практические проекты</span>
+                            </div>
+                            <div class="service-price">От 2,000 ₽/час</div>
                             <div class="card-spacer"></div>
                         </article>
                     </div>
