--- a/pages/news.html
+++ b/pages/news.html
@@ -2,9 +2,10 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>Новости</title>
         <link rel="stylesheet" href="../style/styles.css">
+        <script src="../js/main.js" defer></script>
     </head>
     <body>
         <div class="page-container">
@@ -39,22 +40,67 @@
             </nav>
             <main class="content">
                 <section class="experience-section" aria-label="Новости">
-                    <h2 class="section-title">Новости</h2>
+                    <h2 class="section-title">Новости разработки</h2>
                     <div class="cards-grid">
                         <article class="experience-card">
-                            <h3 class="experience-title">Запуск проекта</h3>
-                            <p class="experience-desc">01.09.2025 • Автор: Иванов И.И.</p>
-                            <p>Мы запустили учебный проект по фронтенд и бэкенд разработке. Следите за обновлениями!</p>
+                            <h3 class="experience-title">Завершение практического занятия №14</h3>
+                            <p class="experience-desc">15.01.2025 • Автор: Айрапетян Р.Г.</p>
+                            <p>Успешно завершено практическое занятие по созданию полноценного веб-приложения с интеграцией фронтенда и бэкенда. Проект включает Docker контейнеризацию и CI/CD пайплайн.</p>
+                            <div class="news-tags">
+                                <span class="news-tag">Docker</span>
+                                <span class="news-tag">CI/CD</span>
+                                <span class="news-tag">Fullstack</span>
+                            </div>
                         </article>
                         <article class="experience-card">
-                            <h3 class="experience-title">Обновление материалов</h3>
-                            <p class="experience-desc">10.09.2025 • Автор: Иванов И.И.</p>
-                            <p>Добавлены новые практики и примеры к занятиям. Проверьте раздел практик.</p>
+                            <h3 class="experience-title">Новые технологии в стеке</h3>
+                            <p class="experience-desc">10.01.2025 • Автор: Айрапетян Р.Г.</p>
+                            <p>Изучены и внедрены новые технологии: TypeScript для типизации, Next.js для SSR, и Prisma для работы с базой данных. Это значительно улучшило качество кода и производительность приложений.</p>
+                            <div class="news-tags">
+                                <span class="news-tag">TypeScript</span>
+                                <span class="news-tag">Next.js</span>
+                                <span class="news-tag">Prisma</span>
+                            </div>
                         </article>
                         <article class="experience-card">
-                            <h3 class="experience-title">Публикация демо</h3>
-                            <p class="experience-desc">20.09.2025 • Автор: Иванов И.И.</p>
-                            <p>Доступна демо-версия сайта на GitHub Pages. Оставляйте отзывы.</p>
+                            <h3 class="experience-title">Публикация проектов на GitHub</h3>
+                            <p class="experience-desc">05.01.2025 • Автор: Айрапетян Р.Г.</p>
+                            <p>Все учебные проекты и практические работы теперь доступны в открытом доступе на GitHub. Включает подробную документацию и инструкции по запуску.</p>
+                            <div class="news-tags">
+                                <span class="news-tag">GitHub</span>
+                                <span class="news-tag">Open Source</span>
+                                <span class="news-tag">Документация</span>
+                            </div>
+                        </article>
+                        <article class="experience-card">
+                            <h3 class="experience-title">Участие в хакатоне</h3>
+                            <p class="experience-desc">28.12.2024 • Автор: Айрапетян Р.Г.</p>
+                            <p>Участие в студенческом хакатоне по веб-разработке. Команда заняла 2-е место с проектом социальной платформы для студентов с использованием React и Node.js.</p>
+                            <div class="news-tags">
+                                <span class="news-tag">Хакатон</span>
+                                <span class="news-tag">React</span>
+                                <span class="news-tag">Node.js</span>
+                            </div>
+                        </article>
+                        <article class="experience-card">
+                            <h3 class="experience-title">Изучение DevOps практик</h3>
+                            <p class="experience-desc">20.12.2024 • Автор: Айрапетян Р.Г.</p>
+                            <p>Начато изучение DevOps методологий: настройка автоматического деплоя с GitHub Actions, мониторинг приложений и контейнеризация с Docker Compose.</p>
+                            <div class="news-tags">
+                                <span class="news-tag">DevOps</span>
+                                <span class="news-tag">GitHub Actions</span>
+                                <span class="news-tag">Docker</span>
+                            </div>
+                        </article>
+                        <article class="experience-card">
+                            <h3 class="experience-title">Создание портфолио</h3>
+                            <p class="experience-desc">15.12.2024 • Автор: Айрапетян Р.Г.</p>
+                            <p>Запуск персонального сайта-портфолио для демонстрации навыков и проектов. Сайт создан с использованием современных веб-технологий и адаптивного дизайна.</p>
+                            <div class="news-tags">
+                                <span class="news-tag">Портфолио</span>
+                                <span class="news-tag">HTML5</span>
+                                <span class="news-tag">CSS3</span>
+                            </div>
                         </article>
                     </div>
                 </section>
